--- a/Front-End/Appgregate/Appgregate/Appgregate.csproj
+++ b/Front-End/Appgregate/Appgregate/Appgregate.csproj
@@ -192,6 +192,7 @@
     <Content Include="Content\bootstrap-theme.min.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
     <Content Include="Account\Web.config" />
+    <Content Include="AppComments.aspx" />
     <Content Include="SubmitApp.aspx" />
     <Content Include="ModerateApps.aspx" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
@@ -364,6 +365,13 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="AppComments.aspx.cs">
+      <DependentUpon>AppComments.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="AppComments.aspx.designer.cs">
+      <DependentUpon>AppComments.aspx</DependentUpon>
+    </Compile>
     <Compile Include="MyModule1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Site.Master.cs">
